# Intern

./: README.md
pre-campaign-intelligence/: main.py  main_kafka_orchestrator.py  pyproject.toml
pre-campaign-intelligence/dummy_data/: .gitignore  campaign_dummy_data.json
pre-campaign-intelligence/src/: bootstrap.py
pre-campaign-intelligence/src/adapters/: AiServiceAdapter.py  CampaignAnalyzerAdapter.py  KafkaMessageAdapter.py
pre-campaign-intelligence/src/application/prompts/: __init__.py  campaign_analysis_prompts.py  campaign_reiteration_prompts.py
pre-campaign-intelligence/src/application/services/: CampaignAnalysisService.py  CampaignReiterateService.py  OrchestrationService.py
pre-campaign-intelligence/src/config/: ai_model_config.py  cta_words_config.py  hook_words_config.py
pre-campaign-intelligence/src/domain/contract/: SentimentAnalyzer.py
pre-campaign-intelligence/src/domain/models/: CampaignDataInputModel.py  CampaignDataOutputModel.py  CampaignReiterateOutput.py  enums.py
pre-campaign-intelligence/src/ports/input/: CampaignAnalyzerPort.py
pre-campaign-intelligence/src/ports/output/: AiServicePort.py  MessageConsumerPort.py  MessagePublisherPort.py
pre-campaign-intelligence/src/utils/: get_dummy_campaign_data.py
test/: pyproject.toml
